--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
-  "name": "abitur",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
-  },
-  "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.15",
-    "@vue/cli-plugin-router": "~4.5.15",
-    "@vue/cli-plugin-vuex": "~4.5.15",
-    "@vue/cli-service": "~4.5.15",
-    "vue-template-compiler": "^2.6.11"
-  }
+    "name": "abitur",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build"
+    },
+    "dependencies": {
+        "bootstrap": "^5.1.3",
+        "bootstrap-vue": "^2.22.0",
+        "core-js": "^3.6.5",
+        "hooper": "^0.3.4",
+        "vue": "^2.6.14",
+        "vue-awesome-swiper": "^5.0.1",
+        "vue-axios": "^3.4.1",
+        "vue-owl-carousel": "^2.0.3",
+        "vue-router": "^3.2.0",
+        "vuex": "^3.4.0"
+    },
+    "devDependencies": {
+        "@vue/cli-plugin-babel": "^5.0.4",
+        "@vue/cli-plugin-router": "^5.0.4",
+        "@vue/cli-plugin-vuex": "^5.0.4",
+        "@vue/cli-service": "^5.0.4",
+        "node-sass": "^7.0.1",
+        "sass-loader": "^12.6.0",
+        "vue-template-compiler": "^2.6.11"
+    }
 }
